# CerberCCTV

./: .gitignore  README.md  docker-compose.dev.yml
.do/: app.yaml
admin/: Dockerfile  pyproject.toml
admin/alembic/: env.py
admin/alembic/versions/: 0001_initial.py
admin/cerber_admin/: auth.py  config.py  db.py  env.py  hub.py  live.py  main.py  models.py  retention.py  s3.py  wait_db.py  web.py
admin/cerber_admin/api/: agent.py  ui.py
admin/cerber_admin/static/: app.js  live.js  manifest.webmanifest  style.css  sw.js  zones.js
admin/cerber_admin/templates/: _event_card.html  base.html  dashboard.html  event.html  events.html  live.html  login.html  settings.html
admin/docker/: entrypoint.sh
agent/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
agent/cerber_agent/: capture.py  config.py  control.py  events.py  live.py  main.py  motion.py  uploader.py
common/: pyproject.toml
common/cerber_common/: __init__.py  models.py
