[project]
name = "cerber-admin"
version = "0.1.0"
description = "CerberCCTV: внешняя админка (FastAPI) — настройки, приём клипов, S3, просмотр, live"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "boto3>=1.34",
    "bcrypt>=4.1",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cerber_admin*"]
