[project]
name = "cerber-agent"
version = "0.1.0"
description = "Cerber: агент для Raspberry Pi — захват RTSP, детекция движения, загрузка клипов"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "pydantic>=2.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cerber_agent*"]
