[project]
name = "cerber-common"
version = "0.1.0"
description = "Cerber: общие модели API-контрактов агента и админки"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cerber_common*"]
